// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BooleanWidget renders a boolean false view widget component 1`] = `
<span
  className="metadata boolean widget"
>
  No
</span>
`;

exports[`BooleanWidget renders a boolean true view widget component 1`] = `
<span
  className="metadata boolean widget"
>
  Yes
</span>
`;

exports[`BooleanWidget renders an empty boolean true view widget component 1`] = `
<span
  className="boolean widget"
>
  No
</span>
`;
